Spotify Embed Frame gemacht, Menubar hinzugefügt.

--- a/main.html
+++ b/main.html
@@ -15,8 +15,39 @@
     <link rel="stylesheet" href="/main.css" />
   </head>
 
+  <nav>
+    <ul>
+      <li style="float: right">
+        <a class="active" href="#about">Lebenslauf</a>
+      </li>
+      <li style="float: right"><a class="active" href="#about">Goals</a></li>
+      <li style="float: right"><a class="active" href="#about">Kontakt</a></li>
+      <li style="float: right"><a class="active" href="#about">Sprache</a></li>
+    </ul>
+  </nav>
+
+  <div class="flex-container">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+  </div>
+
   <body>
-    <h1>Test</h1>
-    <p>Test vom Test</p>
+    <h1>No beat - No me!</h1>
+    <h2>These beats help me through the day.</h2>
+    <p>
+      Whether i'm getting my morning shower, taking the train to work or even
+      sometimes at work, i'm always listening to music. My playlist helps me to
+      work faster, be more concentrated and lights up my mood. That's why over
+      the last 5 years, a mixed playlist with my favorite songs from all kind of
+      genres came together. Because music is such an important part in my life,
+      I want to share my playlist with you, so hit the button, while you read
+      more about me.
+    </p>
+    <script
+      src="https://open.spotify.com/embed-podcast/iframe-api/v1"
+      async
+    ></script>
+    <div id="embed-iframe"></div>
   </body>
 </html>
