Bug fixing HTML/CSS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Erin Manahan</a>
+          <a class="navbar-brand" href="#">Joel Bettler</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -42,7 +42,7 @@
       <div class="row cover top champions">
         <div class="col-xs-12">
           <div class="row">
-            <div class="col-xs-6 headline">
+            <div class="col-xs-12 headline">
               <h1 class="background">Hallo, mein Name ist Joel. </h1>
               <p class="lead">These are the Chaaaaaampions!!! Willkommen auf meiner Seite. Entdecke mehr über mich und viel Spass!</p>
             </div>
@@ -59,14 +59,14 @@
       <div id="about" class="row cover">
         <h2 class="text-center">Über mich</h2>
         <div class="row">
-          <div class="col-md-6 text-center about-info">
+          <div class="col-md-12 text-center about-info">
             <img class="profile-img" src="./Joel.jpg">
             <p class="text-center">Wer ich bin? Nun ich bin vieles: Fussball-Fanatiker, treuer Fan, Möchtegern Gamer, noch mehr Möchtegern Videomaker, 
               Junior Business Analyst bei der Valiant Bank, schnell Begeisterungsfähig, noch schneller Motivationsverlierend.... ich bin also vielseitig und bin gerne im Kontakt mit Menschen aller Art.</p>
           </div>
-          <div class="col-md-6 about-tools">
+          <div class="col-md-12 about-tools">
             <p class="text-center">Kein Profi, aber dies sind einige meiner Tools</p>
-              <div class="col-xs-6">
+              <div class="col-xs-12">
                 <ul>
                   <img class= "logo" src="./html.png" alt="HTML5">
                   <img class= "logo" src="./css.png" alt="CSS3">
@@ -86,61 +86,47 @@
         <h2 class="text-center">Mein Lebenslauf</h2>
         <div class="container">
           <div class="row portfolio-projects"> <!-- Two project row-->
+            <div class="col-lg-6 justify-content-start">
+              <div class="portfolio-projects--title">Valiant Bank - Junior Business Analyst</div>
+              <div class="portfolio-projects--desc">Mai 2022 - aktuell</div>
+              <div class="portfolio-projects--desc">Konzeptionelle Arbeiten, Testing sowie Use Case Arbeiten im Bereich Web Security (Authentification)</div>
+              <div class="text-center">
+                <img class="img-responsive portfolio-projects--image-left" src="./MAP4.png" alt="Valiant App">
+              </div>
+              <a class="btn btn-rounded portfolio-projects--btn" href="https://play.google.com/store/apps/details?id=com.valiant.mobilebanking.release" role="button">App jetzt herunterladen (Beta Version)</a>
+            </div>
+            </div>
+              <div class="col-lg-6 text-end justify-content-end pull-right-sm"><!--flipped on small, unflipped on large-->
+                <div class="portfolio-projects--title">Valiant Bank AG - Werkstudent Fokus Mobile Banking</div>
+                <div class="portfolio-projects--desc">Juli 2021 - April 2022</div>
+                <div class="portfolio-projects--desc">Konzeptionelle Arbeiten & Testing</div>
+                <div>
+                  <img class="img-responsive portfolio-projects--image-right" src="./Werkstudent.gif" alt="Valiant">
+                </div>
+                <a class="justify-content-end btn-right btn btn-rounded portfolio-projects--btn" href="https://jobs.valiant.ch/offene-stellen/werkstudent-in-digital-banking-befristet-bis-31-12-2023/a68db95c-8da6-4c7a-abe9-fd65875e2579" role="button">Nachfolger werden</a>
+              </div>
+            </div>
             <div class="col-lg-6"> <!--1st side project -->
-              <div class="row"> 
-                <div class="col-lg-2 text-center">
-                  <h4 class="portfolio-projects--title">Valiant Bank - Junior Business Analyst</h4>
-                  <p class="portfolio-projects--desc">Mai 2022 - aktuell</p>
-                  <p class="portfolio-projects--desc">Konzeptionelle Arbeiten, Testing sowie Use Case Arbeiten im Bereich Web Security (Authentification)</p>
-                  <a class="btn btn-rounded portfolio-projects--btn" href="https://play.google.com/store/apps/details?id=com.valiant.mobilebanking.release" role="button">App jetzt herunterladen (Beta Version)</a>
-                </div>
-                <div class="col-lg-4 text-center">
-                  <img class="portfolio-projects--image-map" src="./MAP4.png" alt="Valiant App">
-                </div>
+              <div class="portfolio-projects--title">Hotel Meielisalp - Rezepionist / Verantwortlicher HR</div>
+              <div class="portfolio-projects--desc">April 2019 - Juni 2021</div>
+              <div class="portfolio-projects--desc">Kaufmännische Arbeiten an der Rezeption, Empfang der Gäste, Stellvertretung des Betriebsleiters bei Abwesenheiten, Verantwortlich für alle HR Arbeiten des Betriebs.</div>
+              <div>
+                  <img class="img-responsive portfolio-projects--image-left" src="./Meielisalp.jpg" alt="Meielisalp">
               </div>
+              <a class="btn btn-rounded portfolio-projects--btn" href="https://www.meielisalp.ch/de/" role="button">Ausflug fällig?</a>
             </div>
-            <div class="col-lg-6"> <!--2nd side project -->
-              <div class="row"> 
-                <div class="col-lg-2 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <h4 class="portfolio-projects--title">Valiant Bank AG - Werkstudent Fokus Mobile Banking</h4>
-                  <p class="portfolio-projects--desc">Juli 2021 - April 2022</p>
-                  <p class="portfolio-projects--desc">Konzeptionelle Arbeiten & Testing</p>
-                  <a class="btn btn-rounded portfolio-projects--btn" href="https://jobs.valiant.ch/offene-stellen/werkstudent-in-digital-banking-befristet-bis-31-12-2023/a68db95c-8da6-4c7a-abe9-fd65875e2579" role="button">Nachfolger werden</a>
-                </div>
-                <div class="col-lg-4 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <img class="img-rounded portfolio-projects--image" src="./Werkstudent.gif" alt="Valiant">
-                </div>
-              </div>
             </div>
-          </div><!--end Two project row-->
-
-          <div class="row portfolio-projects"> <!-- Opposite Two project row-->
-            <div class="col-lg-6"> <!--1st side project -->
-              <div class="row"> 
-                <div class="col-lg-2 text-center">
-                  <h4 class="portfolio-projects--title">Hotel Meielisalp - Rezepionist / Verantwortlicher HR</h4>
-                  <p class="portfolio-projects--desc">April 2019 - Juni 2021</p>
-                  <p class="portfolio-projects--desc">Kaufmännische Arbeiten an der Rezeption, Empfang der Gäste, Stellvertretung des Betriebsleiters bei Abwesenheiten, Verantwortlich für alle HR Arbeiten des Betriebs.</p>
-                  <a class="btn btn-rounded portfolio-projects--btn" href="https://www.meielisalp.ch/de/" role="button">Ausflug fällig?</a>
-                </div>
-                <div class="col-lg-4 text-center">
-                  <img class="img-rounded portfolio-projects--image" src="./Meielisalp.jpg" alt="Meielisalp">
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6"> <!--2nd side project -->
-              <div class="row"> 
-                <div class="col-lg-5 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
-                  <h4 class="portfolio-projects--title">Gamer / Möchtegern Videomaker</h4>
-                  <p class="portfolio-projects--desc">Eigentlich wäre logischerweise hier meine Ausbildung zum Kaufmann EFZ erwähnt, allerdings gibt es nicht wirklich viel Spannendes dazu zu erzählen (Ausbildung bei der Schweizerischen Post, 2015 - 2018).
+              <div class="col-lg-6 text-end justify-content-end pull-right-sm"><!--flipped on small, unflipped on large-->
+                <div class="portfolio-projects--title">Gamer / Möchtegern Videomaker</div>
+                <div class="portfolio-projects--desc">Eigentlich wäre logischerweise hier meine Ausbildung zum Kaufmann EFZ erwähnt, allerdings gibt es nicht wirklich viel Spannendes dazu zu erzählen (Ausbildung bei der Schweizerischen Post, 2015 - 2018).
                     Deshalb habe ich mich entschieden, lieber meine Karriere als Möchtegern Videomaker hier zu vermerken (Achtung, gewisse Ironie vorhanden). Have fun :')
-                  </p>
-                  <p class="portfolio-projects--desc">Country Strike: Global Offensiv, Magix Video Deluxe, Open Broadcaster Software</p>
-                  <a class="btn btn-rounded portfolio-projects--btn" href="https://sonorangirl.github.io/Simon-Game/" role="button">View Project</a>
                 </div>
-                <div class="col-lg-7 text-center pull-right-sm"><!--flipped on small, unflipped on large-->
+                <div class="portfolio-projects--desc">Country Strike: Global Offensiv, Magix Video Deluxe, Open Broadcaster Software</div>
+                </div>
+                <div>
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/FF31JT9bb7A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                </div>  
+              </div>
               </div>
             </div>
           </div>
