--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
 
-  <body>
+  <body class="wholepage">
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -30,7 +30,6 @@
           <ul class="nav navbar-nav navbar-right">
             <li id="nav-about"><a href="#about">Über mich</a></li>
             <li id="nav-portfolio"><a href="#portfolio">Lebenslauf</a></li>
-            <li id="nav-goals"><a href="#portfolio">Goals</a></li>
             <li id="nav-contact"><a href="#contact">Kontakt</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -95,7 +94,7 @@
               </div>
               <a class="btn btn-rounded portfolio-projects--btn" href="https://play.google.com/store/apps/details?id=com.valiant.mobilebanking.release" role="button">App jetzt herunterladen (Beta Version)</a>
             </div>
-            </div>
+          </div>
               <div class="col-lg-6 text-end justify-content-end pull-right-sm"><!--flipped on small, unflipped on large-->
                 <div class="portfolio-projects--title">Valiant Bank AG - Werkstudent Fokus Mobile Banking</div>
                 <div class="portfolio-projects--desc">Juli 2021 - April 2022</div>
@@ -106,7 +105,7 @@
                 <a class="justify-content-end btn-right btn btn-rounded portfolio-projects--btn" href="https://jobs.valiant.ch/offene-stellen/werkstudent-in-digital-banking-befristet-bis-31-12-2023/a68db95c-8da6-4c7a-abe9-fd65875e2579" role="button">Nachfolger werden</a>
               </div>
             </div>
-            <div class="col-lg-6"> <!--1st side project -->
+            <div class="col-lg-6 justify-content-start"> <!--1st side project -->
               <div class="portfolio-projects--title">Hotel Meielisalp - Rezepionist / Verantwortlicher HR</div>
               <div class="portfolio-projects--desc">April 2019 - Juni 2021</div>
               <div class="portfolio-projects--desc">Kaufmännische Arbeiten an der Rezeption, Empfang der Gäste, Stellvertretung des Betriebsleiters bei Abwesenheiten, Verantwortlich für alle HR Arbeiten des Betriebs.</div>
@@ -122,16 +121,14 @@
                     Deshalb habe ich mich entschieden, lieber meine Karriere als Möchtegern Videomaker hier zu vermerken (Achtung, gewisse Ironie vorhanden). Have fun :')
                 </div>
                 <div class="portfolio-projects--desc">Country Strike: Global Offensiv, Magix Video Deluxe, Open Broadcaster Software</div>
-                </div>
                 <div>
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/FF31JT9bb7A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>  
               </div>
-              </div>
             </div>
           </div>
-
         </div>
+      </div>
         </div>
       </div>
 
@@ -146,7 +143,6 @@
             <a href="https://www.instagram.com/j0el_99_/?hl=de"><li><i class="fa fa-insta"></i> Instagram</li></a>
           </ul>
         </p>
-        
       </div>
 
     </div>
