--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <link rel="stylesheet" href="/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   </head>
 
   <body class="wholepage">
@@ -67,13 +70,13 @@
             <p class="text-center">Kein Profi, aber dies sind einige meiner Tools</p>
               <div class="col-xs-12">
                 <ul>
-                  <img class= "logo" src="./html.png" alt="HTML5">
-                  <img class= "logo" src="./css.png" alt="CSS3">
-                  <img class= "logo" src="./Javascipt.png" alt="JavaScript">
-                  <img class= "logo" src="./Bootstrap.png" alt="Bootstrap">
-                  <img class= "logo" src="./Python.png" alt="Python">
-                  <img class= "logo" src="./rstudio.png" alt="R Studio">
-                  <img class= "logo" src="./github.png" alt="GitHub">
+                  <img class= "logo animate__animated animate__fadeInLeft" src="./html.png" alt="HTML5">
+                  <img class= "logo animate__animated animate__fadeInRight" src="./css.png" alt="CSS3">
+                  <img class= "logo animate__animated animate__fadeInLeft" src="./Javascipt.png" alt="JavaScript">
+                  <img class= "logo animate__animated animate__fadeInRight" src="./Bootstrap.png" alt="Bootstrap">
+                  <img class= "logo animate__animated animate__fadeInLeft" src="./Python.png" alt="Python">
+                  <img class= "logo animate__animated animate__fadeInRight" src="./rstudio.png" alt="R Studio">
+                  <img class= "logo animate__animated animate__fadeInLeft" src="./github.png" alt="GitHub">
                 </ul>
               </div>
               </div>
