--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body class="wholepage">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default" style="position:fixed">
       <div class="container">
         <div class="navbar-header">
             <span class="icon-bar"></span>
@@ -124,34 +124,31 @@
 
             </div>
             <div data-aos="fade-down" data-aos-duration="1000" class="links">
-              Linkliste
+              Links:
             </div>
-            <a data-aos="flip-up" data-aos-duration="1000" class="btn btn-rounded portfolio-projects--btn" href="https://play.google.com/store/apps/details?id=com.valiant.mobilebanking.release" role="button">Jetzt Valiant Kunde werden und die neue App herunterladen (Beta Version)</a>
-            <a data-aos="flip-up" data-aos-duration="1000" class="btn btn-rounded portfolio-projects--btn" href="https://www.meielisalp.ch/de/">Auszeit gefällig oder Seminar planen? Alle Infos auf unserer Website!</a>
-            <a data-aos="flip-up" data-aos-duration="1000" class="btn btn-rounded portfolio-projects--btn" href="https://www.youtube.com/@reaxontv1574" role="button">Nah - hat dir das Video gefallen? Weitere 4 Clips findest du hier!</a>
+            <a data-aos="flip-up" data-aos-duration="1000" class="portfolio-projects--btn" href="https://play.google.com/store/apps/details?id=com.valiant.mobilebanking.release" role="button">Jetzt Valiant Kunde werden und die neue App herunterladen (Beta Version)</a>
+            <a data-aos="flip-up" data-aos-duration="1000" class="portfolio-projects--btn" href="https://www.meielisalp.ch/de/">Auszeit gefällig oder Seminar planen? Alle Infos auf unserer Website!</a>
+            <a data-aos="flip-up" data-aos-duration="1000" class="portfolio-projects--btn" href="https://www.youtube.com/@reaxontv1574" role="button">Nah - hat dir das Video gefallen? Weitere 4 Clips findest du hier!</a>
           </div>
         </div>
       </div>
         </div>
       </div>
+    </div>
 
-      <div id="contact" class="row cover bottom">
+    <footer class="footer">
+      <div id="contact" class="row bottom">
         <h2 class="text-center contact-header">Kontakt</h2>
-        <p class="text-center contact-email">Fragen zu meiner Playlist? Eventplanung im Bereich Fussball oder Gaming? Kontaktiere mich! <span class="glyphicon glyphicon-arrow-right"></span> joelbettler99@gmail.com</p>
+        <p class="text-center contact-email">Fragen zu meinen Projekten? Auch Fussball-Fanatiker? Kontaktiere mich! joelbettler99@gmail.com</p>
         <div class="text-center contact-social-icons">
-          <p>Oder auch auf:</p>
+          <p class="spaceend">Oder auch auf:</p>
           <ul class="centered">
             <a href="https://www.linkedin.com/in/joel-bettler-845125232/"><li><i class="fa fa-linkedin-square"></i> LinkedIn</li></a>
             <a href="https://github.com/ReaxonTV"><li><i class="fa fa-github"></i> Github</li></a>
             <a href="https://www.instagram.com/j0el_99_/?hl=de"><li><i class="fa fa-insta"></i> Instagram</li></a>
           </ul>
         </p>
-      </div>
-
-    </div>
-
-    <footer class="footer">
-      <div class="container">
+        </div>
       </div>
     </footer>
     <script src="script.js"></script>
